# t-by-t-sampling

./: README.md  benchmark.py  generate_circuits.py  plot.py  pyproject.toml  results.txt
circuits/cultiv_distance/: 11.qasm  13.qasm  15.qasm  17.qasm  19.qasm  7.qasm  9.qasm
circuits/pauliexp_layers/: 10-0.qasm  10-1.qasm  10-2.qasm  10-3.qasm  10-4.qasm  10-5.qasm  10-6.qasm  10-7.qasm  10-8.qasm  10-9.qasm  13-0.qasm  13-1.qasm  13-2.qasm  13-3.qasm  13-4.qasm  13-5.qasm  13-6.qasm  13-7.qasm  13-8.qasm  13-9.qasm  16-0.qasm  16-1.qasm  16-2.qasm  16-3.qasm  16-4.qasm  16-5.qasm  16-6.qasm  16-7.qasm  16-8.qasm  16-9.qasm  19-0.qasm  19-1.qasm  19-2.qasm  19-3.qasm  19-4.qasm  19-5.qasm  19-6.qasm  19-7.qasm  19-8.qasm  19-9.qasm  (+100 more)
circuits/pauliexp_qubits/: 10-0.qasm  10-1.qasm  10-2.qasm  10-3.qasm  10-4.qasm  10-5.qasm  10-6.qasm  10-7.qasm  10-8.qasm  10-9.qasm  100-0.qasm  100-1.qasm  100-2.qasm  100-3.qasm  100-4.qasm  100-5.qasm  100-6.qasm  100-7.qasm  100-8.qasm  100-9.qasm  110-0.qasm  110-1.qasm  110-2.qasm  110-3.qasm  110-4.qasm  110-5.qasm  110-6.qasm  110-7.qasm  110-8.qasm  110-9.qasm  120-0.qasm  120-1.qasm  120-2.qasm  120-3.qasm  120-4.qasm  120-5.qasm  120-6.qasm  120-7.qasm  120-8.qasm  120-9.qasm  (+110 more)
cultivation/: README.md
cultivation/cultiv/: __init__.py  _error_enumeration_report.py  _error_set.py  _error_set_test.py  _stats_util.py  _stats_util_test.py  make_lifetime_plot.py  make_lifetime_plot_test.py
cultivation/cultiv/_construction/: _color_code.py  (+13 more)
sim/: __init__.py  gate_by_gate.py  qubit_by_qubit.py  t_by_t.py  util.py
(+15 files in other folders)
