[project]
name = "t-by-t-sampling"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "stim>=1.15.0",
    "quizx>=0.3.0",
    "pyzx>=0.9.0",
    "matplotlib>=3.10.8",
    "sinter>=1.15.0",
]

[tool.uv.sources]
quizx = { git = "https://github.com/zxcalc/quizx.git", rev="d75f041", subdirectory="pybindings" }

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
